bugfix: fix value fixed in entity row

--- a/src/main/resources/templates/front/swift/entityHeaderView.mustache
+++ b/src/main/resources/templates/front/swift/entityHeaderView.mustache
@@ -1,6 +1,6 @@
 import SwiftUI
 
-struct EntityHeaderView: View {
+struct {{entity}}HeaderView: View {
     let title: String
     let indicators: [String: String]
 
