--- a/src/main/resources/templates/front/swift/entityRowView.mustache
+++ b/src/main/resources/templates/front/swift/entityRowView.mustache
@@ -1,8 +1,8 @@
-import SwiftData
 import SwiftUI
+import SwiftData
 
-struct SaleRowView: View {
-    var entity: Sale
+struct {{entity}}RowView: View {
+    let entity: {{entity}}
 
     var body: some View {
         HStack(alignment: .top, spacing: 12) {
@@ -27,9 +27,23 @@ struct SaleRowView: View {
                     .font(.caption)
                 }
 
+                VStack(alignment: .leading, spacing: 2) {
+                    {{#fields}}
+
+                     {{#displayName}}
+
+                        Text("{{displayName}} : \(entity.{{name}})")
+                            .font(.caption)
+                            .foregroundColor(.secondary)
+
+
+                    {{/displayName}}
+                {{/fields}}
+                }
+
                 if let updatedAt = entity.updatedAt {
-                    Text("Updated: \(formattedDate(updatedAt))")
-                        .font(.caption)
+                    Text(" \(formattedDate(updatedAt))")
+                        .font(.caption2)
                         .foregroundColor(.gray)
                 }
             }
@@ -53,8 +67,7 @@ struct SaleRowView: View {
         case .failed: "Failed"
         case .create: "Created"
         case .update: "Modified"
-        case .delete: "Deleted"
-        case .trash: "Deleted"
+        case .delete, .trash: "Deleted"
         }
     }
 
@@ -65,8 +78,7 @@ struct SaleRowView: View {
         case .failed: "xmark.octagon.fill"
         case .create: "plus.circle.fill"
         case .update: "pencil.circle.fill"
-        case .delete: "trash.fill"
-        case .trash: "trash.fill"
+        case .delete, .trash: "trash.fill"
         }
     }
 
@@ -77,12 +89,12 @@ struct SaleRowView: View {
         case .failed: .red
         case .create: .gray
         case .update: .orange
-        case .delete: .black
-        case .trash: .black
+        case .delete, .trash: .black
         }
     }
 
-    private func formattedDate(_ date: Date) -> String {
+    private func formattedDate(_ date: Date?) -> String {
+        guard let date else { return "-" }
         let formatter = DateFormatter()
         formatter.dateStyle = .short
         formatter.timeStyle = .short
