--- a/src/main/resources/templates/front/swift/entityPickerView.mustache
+++ b/src/main/resources/templates/front/swift/entityPickerView.mustache
@@ -63,6 +63,9 @@ struct {{entity}}PickerView: View {
                     viewModel: viewModel
                 )
             }
+            onAppear {
+                   viewModel.fetchEntities()
+               }
         }
     }
 }
