--- a/src/main/resources/templates/infrastructure/security/forgotPasswordControllerTest.mustache
+++ b/src/main/resources/templates/infrastructure/security/forgotPasswordControllerTest.mustache
@@ -48,7 +48,7 @@ private final String password = "admin";
 
 private void createUser() {
 if (userRepository.findByUsernameAndTenantName(username,DEFAULT_TENANT).isEmpty()) {
-CustomUser user = CustomUser.builder()
+User user = User.builder()
 .id(UUID.randomUUID().toString())
 .username(username)
 .password(encoder.encode(password))
