--- a/src/main/resources/templates/tests/deletecontrollerintegrationtest.mustache
+++ b/src/main/resources/templates/tests/deletecontrollerintegrationtest.mustache
@@ -19,9 +19,23 @@ private {{name}}Repository {{nameLower}}Repository;
 @Autowired
 private CommandGateway commandGateway;
 
+
+{{#fields}}
+{{#hasRepository}}
+@Autowired
+private {{repository}} ;
+{{/hasRepository}}
+{{/fields}}
+
 @Test
 void it_should_be_able_to_delete_{{nameLower}}() {
-	String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway, getCurrentUser()).getId().value();
+	String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway, {{nameLower}}Repository,
+	 {{#fields}}
+    {{#hasRepository}}
+        {{nameUnCapitalized}}DataRepository,
+{{/hasRepository}}
+{{/fields}}
+	getCurrentUser()).getId().value();
 
 	{{name}}Fixtures.byIdWaitExist({{nameLower}}Repository, existingId);
 
