--- a/src/main/resources/templates/tests/findallcontrollerintegrationtest.mustache
+++ b/src/main/resources/templates/tests/findallcontrollerintegrationtest.mustache
@@ -29,11 +29,25 @@ private CommandGateway commandGateway;
 @Autowired
 private {{name}}Repository {{entityUnCapitalized}}Repository;
 
+{{#fields}}
+{{#hasRepository}}
+@Autowired
+private {{repository}} ;
+{{/hasRepository}}
+{{/fields}}
+
 @Test
 void it_should_return_only_user_{{entityUnCapitalized}}s_for_normal_user() throws Exception {
 
 List<Create{{name}}Command> userCommands =
-{{name}}Fixtures.randomManyViaCommand(commandGateway, 3, login("user", "user"));
+{{name}}Fixtures.randomManyViaCommand(
+commandGateway,{{entityUnCapitalized}}Repository,
+ {{#fields}}
+{{#hasRepository}}
+{{nameUnCapitalized}}DataRepository,
+{{/hasRepository}}
+{{/fields}}
+ 3, login("user", "user"));
 userCommands.forEach(cmd ->
 {{name}}Fixtures.byIdWaitExist({{entityUnCapitalized}}Repository, cmd.getId().value())
 );
@@ -67,15 +81,31 @@ assertThat(actualIds).containsAll(expectedIds);
 @Test
 void it_should_return_all_{{entityUnCapitalized}}s_for_admin() throws Exception {
 
-List<Create{{name}}Command> userCommands =
-{{name}}Fixtures.randomManyViaCommand(commandGateway, 5, login("user", "user"));
-userCommands.forEach(cmd ->
-{{name}}Fixtures.byIdWaitExist({{entityUnCapitalized}}Repository, cmd.getId().value())
-);
+    List<Create{{name}}Command> userCommands =
+    {{name}}Fixtures.randomManyViaCommand(
+        commandGateway,
+        {{entityUnCapitalized}}Repository,
+        {{#fields}}
+            {{#hasRepository}}
+         {{nameUnCapitalized}}DataRepository,
+        {{/hasRepository}}
+        {{/fields}}
+         5, login("user", "user")
+      );
+    userCommands.forEach(cmd ->
+    {{name}}Fixtures.byIdWaitExist({{entityUnCapitalized}}Repository, cmd.getId().value())
+    );
 
 
 List<Create{{name}}Command> adminCommands =
-{{name}}Fixtures.randomManyViaCommand(commandGateway, 5, login("admin", "admin"));
+{{name}}Fixtures.randomManyViaCommand(
+commandGateway,{{entityUnCapitalized}}Repository,
+{{#fields}}
+    {{#hasRepository}}
+        {{nameUnCapitalized}}DataRepository,
+        {{/hasRepository}}
+{{/fields}}
+ 5, login("admin", "admin"));
 adminCommands.forEach(cmd ->
 {{name}}Fixtures.byIdWaitExist({{entityUnCapitalized}}Repository, cmd.getId().value())
 );
