--- a/src/main/resources/templates/tests/fixtures.mustache
+++ b/src/main/resources/templates/tests/fixtures.mustache
@@ -8,68 +8,67 @@ import {{base}}.{{vo}}.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.TimeUnit;
 import org.axonframework.commandhandling.gateway.CommandGateway;
 import org.springframework.mock.web.MockMultipartFile;
-import java.util.concurrent.TimeUnit;
 import static org.awaitility.Awaitility.await;
 
 public class {{name}}Fixtures {
 
-public static {{entity}} randomOne({{name}}Repository repository) {
-{{entity}} entity = {{entity}}.builder()
-.id(UUID.randomUUID().toString())
-{{#editableFields}}
-	{{^isId}}
-		{{^relation}}
-			.{{nameLowerCase}}({{{testValue}}})
-		{{/relation}}
-	{{/isId}}
-{{/editableFields}}
-.build();
-return repository.save(entity);
-}
+	public static {{entity}} byId({{name}}Repository repository, String id) {
+		return repository.findById(id).orElse(null);
+	}
 
-public static {{entity}} existingOrRandom({{name}}Repository repository) {
-return repository.findAll().stream().findFirst().orElseGet(() -> randomOne(repository));
-}
+	public static {{entity}} byIdWaitExist({{name}}Repository repository, String id) {
+		await().atMost(10, TimeUnit.SECONDS).until(() -> repository.findById(id).isPresent());
+		return repository.findById(id).orElse(null);
+	}
 
-public static {{entity}} byId({{name}}Repository repository, String id) {
-return repository.findById(id).orElse(null);
-}
+	public static {{entity}} byIdWaitNotExist({{name}}Repository repository, String id) {
+		await().atMost(10, TimeUnit.SECONDS).until(() -> repository.findById(id).isEmpty());
+		return null;
+	}
 
-public static {{entity}} byIdWaitExist({{name}}Repository repository, String id) {
-await().atMost(5, TimeUnit.SECONDS).until(() -> byId(repository, id) != null);
-return repository.findById(id).orElse(null);
-}
-
-public static {{entity}} byIdWaitNotExist({{name}}Repository repository, String id) {
-await().atMost(5, TimeUnit.SECONDS).until(() -> byId(repository, id) == null);
-return repository.findById(id).orElse(null);
-}
-
-public static List<{{entity}}> randomMany({{name}}Repository repository, int count) {
-List<{{entity}}> items = new ArrayList<>();
-for (int i = 0; i < count; i++) {
-items.add(randomOne(repository));
-}
-return items;
-}
-
-public static List<Create{{name}}Command> randomManyViaCommand(CommandGateway commandGateway, int count,User user) {
-	List<Create{{name}}Command> items = new ArrayList<>();
+	public static List<Create{{name}}Command> randomManyViaCommand(
+		CommandGateway commandGateway,
+		{{name}}Repository repository,
+		{{#fields}}
+        {{#hasRepository}}
+        {{repository}},
+        {{/hasRepository}}
+        {{/fields}}
+		int count,
+		User user
+	) {
+		List<Create{{name}}Command> items = new ArrayList<>();
 		for (int i = 0; i < count; i++) {
-		items.add(randomOneViaCommand(commandGateway,user));
+			Create{{name}}Command command = randomOneViaCommand(
+			commandGateway,
+			 repository,
+			 {{#fields}}
+            {{#hasRepository}}
+            {{nameUnCapitalized}}DataRepository,
+            {{/hasRepository}}
+            {{/fields}}
+			 user);
+			items.add(command);
 		}
 		return items;
-		}
+	}
 
-		public static void deleteAll({{name}}Repository repository) {
+	public static void deleteAll({{name}}Repository repository) {
 		repository.deleteAll();
-		}
+	}
 
-		public static Create{{name}}Command randomOneViaCommand(CommandGateway commandGateway, User user) {
-
-
+		public static Create{{name}}Command randomOneViaCommand(
+		CommandGateway commandGateway,
+		{{name}}Repository  repository,
+		{{#fields}}
+        {{#hasRepository}}
+        {{repository}},
+        {{/hasRepository}}
+        {{/fields}}
+		 User user) {
 			{{#hasFiles}}
 				MockMultipartFile files = new MockMultipartFile("fake", "fake.txt", "text/plain", "Hello".getBytes());
 				String fileName = files.getName();
@@ -86,10 +85,45 @@ public static List<Create{{name}}Command> randomManyViaCommand(CommandGateway co
 			{{/hasFiles}}
 			.build();
 
-			command.setCreatedBy({{name}}CreatedBy.create(user.getId()));
-			command.setTenant({{name}}Tenant.create(user.getTenant().getId()));
-
-			commandGateway.sendAndWait(command);
+		command.setCreatedBy({{name}}CreatedBy.create(user.getId()));
+		command.setTenant({{name}}Tenant.create(user.getTenant().getId()));
+		commandGateway.sendAndWait(command);
+		await().atMost(10, TimeUnit.SECONDS).until(() -> repository.findById(command.getId().value()).isPresent());
 		return command;
 	}
+
+
+{{#hasManyToOne}}
+	public static Create{{name}}Command randomOneViaCommand(
+        CommandGateway commandGateway,
+        {{name}}Repository  repository,
+        User user
+        ) {
+        {{#hasFiles}}
+        MockMultipartFile files = new MockMultipartFile("fake", "fake.txt", "text/plain", "Hello".getBytes());
+        String fileName = files.getName();
+        {{/hasFiles}}
+
+        Create{{name}}Command command = Create{{name}}Command.builder()
+        {{#editableFields}}
+        {{^hasRepository}}
+    {{^isId}}
+        .{{nameLowerCase}}({{nameAggregate}}{{nameCapitalized}}.create({{{testValue}}}))
+        {{/isId}}
+        {{/hasRepository}}
+        {{/editableFields}}
+        {{#hasFiles}}
+        {{#fieldFiles}}
+        .{{nameLowerCase}}({{nameAggregate}}{{nameCapitalized}}.create(fileName))
+        {{/fieldFiles}}
+        {{/hasFiles}}
+        .build();
+
+		command.setCreatedBy({{name}}CreatedBy.create(user.getId()));
+		command.setTenant({{name}}Tenant.create(user.getTenant().getId()));
+		commandGateway.sendAndWait(command);
+		await().atMost(10, TimeUnit.SECONDS).until(() -> repository.findById(command.getId().value()).isPresent());
+		return command;
+	}
+	{{/hasManyToOne}}
 }
