--- a/src/main/resources/templates/tests/syncControllerTests.mustache
+++ b/src/main/resources/templates/tests/syncControllerTests.mustache
@@ -18,6 +18,16 @@ public class {{className}} extends BaseIntegrationTests {
 	@Autowired
 	private CommandGateway commandGateway;
 
+	@Autowired
+private {{name}}Repository {{nameLower}}Repository;
+
+	{{#fields}}
+    {{#hasRepository}}
+    @Autowired
+    private {{repository}} ;
+    {{/hasRepository}}
+    {{/fields}}
+
 	@Test
 	void it_should_initiate_sync_of_{{nameLowercase}}s() {
 		{{name}}SyncRequest requestDTO = {{name}}SyncRequest.builder()
@@ -45,7 +55,7 @@ public class {{className}} extends BaseIntegrationTests {
 			@Test
 			void it_should_initiate_update_of_{{nameLowercase}}s() {
 
-			String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway, getCurrentUser()).getId().value();
+			String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway,{{nameLower}}Repository, getCurrentUser()).getId().value();
 
 			{{name}}SyncRequest requestDTO = {{name}}SyncRequest.builder()
 			.deltas(List.of(
@@ -71,7 +81,7 @@ public class {{className}} extends BaseIntegrationTests {
 
 					@Test
 					void it_should_initiate_delete_of_{{nameLowercase}}s() {
-					String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway, getCurrentUser()).getId().value();
+					String existingId = {{name}}Fixtures.randomOneViaCommand(commandGateway,{{nameLower}}Repository, getCurrentUser()).getId().value();
 					{{name}}SyncRequest requestDTO = {{name}}SyncRequest.builder()
 					.deltas(List.of(
 					{{name}}DeltaDto.builder()
