bugfix: many to many

--- a/src/main/resources/templates/presentation/projection.mustache
+++ b/src/main/resources/templates/presentation/projection.mustache
@@ -28,10 +28,10 @@ try {
 {{entity}} entity = {{entity}}.builder()
 {{#editableFields}}
 	{{^isOneToMany}} {{^isManyToOne}}
-		.{{nameLowerCase}}(event.get{{nameCapitalized}}().value())
+		.{{nameLowerCase}}(event.get{{nameCapitalized}}() == null ? null : event.get{{nameCapitalized}}().value())
 	{{/isManyToOne}} {{/isOneToMany}}
 	{{#isManyToOne}}
-		.{{nameLowerCase}}(new {{realType}}(event.get{{nameCapitalized}}().value()))
+		.{{nameLowerCase}}( event.get{{nameCapitalized}}() == null ? null : new {{realType}}(event.get{{nameCapitalized}}().value()))
 	{{/isManyToOne}}
 {{/editableFields}}
 .build();
